<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/splash_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg">

    <!-- Glowing Background Effect -->
    <View
        android:id="@+id/v_glow"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:background="@drawable/glowing_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <ImageView
        android:id="@+id/iv_train_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_train_modern"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/v_glow"
        app:layout_constraintEnd_toEndOf="@+id/v_glow"
        app:layout_constraintStart_toStartOf="@+id/v_glow"
        app:layout_constraintTop_toTopOf="@+id/v_glow"
        app:tint="@color/railway_yellow" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/app_name_full"
        android:textColor="@color/railway_yellow"
        android:textSize="42sp"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_glow" />

    <TextView
        android:id="@+id/tv_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tagline"
        android:textColor="@color/app_text"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

    <TextView
        android:id="@+id/tv_tagline_extended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tagline_extended"
        android:textColor="@color/app_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tagline" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="64dp"
        android:indeterminateTint="@color/railway_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
